# coreason-optimizer

./: .gitignore  AGENTS.md  Dockerfile  README.md  VIGNETTE.md  mkdocs.yml  optimized_manifest.json  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml
docs/: index.md  product_requirements.md  requirements.md  usage.md
src/coreason_optimizer/: __init__.py  main.py  server.py  server_schemas.py
src/coreason_optimizer/core/: async_client.py  budget.py  client.py  config.py  formatter.py  interfaces.py  metrics.py  models.py
src/coreason_optimizer/data/: loader.py
src/coreason_optimizer/strategies/: bootstrap.py  mipro.py  mutator.py  selector.py
src/coreason_optimizer/utils/: adapters.py  helpers.py  import_utils.py  logger.py
tests/: conftest.py  test_cli_complex.py  test_complex_scenarios.py  test_identity_enforcement.py  test_logger_coverage.py  test_main.py  test_main_cli.py  test_main_cli_coverage.py  test_readme_usage.py  test_server_basic.py  test_utils.py  test_utils_import.py
tests/core/: test_async_client_coverage.py  test_async_client_default_init.py  test_async_client_full.py  test_budget.py  test_budget_edge.py  test_budget_edge_cases.py  test_client.py  test_client_budget_wrapper.py  test_client_context.py  test_client_edge_cases.py  test_client_embedding.py  test_client_fallback.py  test_client_refactor.py  test_config.py  test_exceptions.py  test_metric_json_complex.py  test_metric_json_validity.py  test_metrics.py  test_metrics_json.py  test_models.py
tests/data/: test_loader.py  test_loader_edge_cases.py
tests/integration/: test_workflow.py
tests/strategies/: test_async_exception_coverage.py  test_async_strategies_coverage.py  test_bootstrap.py  test_bootstrap_complex.py  test_budget_integration.py  test_gap_fill.py  test_mipro.py  test_mutator.py  test_mutator_direct.py  test_mutator_llm.py  test_selector.py  test_selector_async.py  test_selector_edge_cases.py  test_selector_semantic.py  test_selector_sync_direct.py  test_sync_coverage.py
tests/utils/: test_adapters_embedding.py  test_helpers.py  test_import_utils.py
