[tool.poetry]
name = "coreason_optimizer"
version = "0.1.0"
description = "coreason-optimizer"
authors = ["Gowtham A Rao <gowtham.rao@coreason.ai>"]
license = "Prosperity-3.0"
readme = "README.md"
packages = [{include = "coreason_optimizer", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.12, <3.15"
loguru = "^0.7.2"
pydantic = "^2.12.5"
jinja2 = "^3.1.6"
openai = "^2.15.0"
click = "^8.3.1"
numpy = "^2.4.1"
scikit-learn = "^1.8.0"
anyio = "*"
httpx = "*"
aiofiles = "*"
types-aiofiles = "*"

[tool.poetry.scripts]
coreason-opt = "coreason_optimizer.main:cli"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
ruff = "^0.4.8"
pre-commit = "^3.7.1"
pytest-cov = "^5.0.0"
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.26"
pytest-asyncio = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "coreason_optimizer"
version = "0.1.0"
description = "coreason-optimizer"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Gowtham A Rao", email = "gowtham.rao@coreason.ai" },
]
license = { file = "LICENSE" }
classifiers = [
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/CoReason-AI/coreason_optimizer"
Repository = "https://github.com/CoReason-AI/coreason_optimizer"
Documentation = "https://github.com/CoReason-AI/coreason_optimizer"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["coreason_optimizer"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
# This is needed because sometimes mypy doesn't see Pydantic types correctly in this environment,
# treating BaseModel as Any.
disallow_subclassing_any = false
disallow_untyped_decorators = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--cov=src --cov-report=term-missing --cov-report=html --cov-fail-under=100"
testpaths = ["tests"]

[tool.coverage.run]
omit = ["tests/*"]
omit = ["tests/*"]